--- a/emscripten/Dockerfile
+++ b/emscripten/Dockerfile
@@ -5,7 +5,7 @@ FROM mybinaryen:0.1 AS binaryen-build
 FROM myubuntu:0.1
 
 COPY --from=llvm-build /build/llvm-project/build /build/llvm
-COPY --from=node-build /build/node-src /build/node
+COPY --from=node-build /root/local/node /build/node
 COPY --from=binaryen-build /build/binaryen /build/binaryen
 
 # 安装 emscripten
@@ -17,4 +17,4 @@ ENV PATH="${EM_LLVM_ROOT}:${BINARYEN_ROOT}:${NODE_JS_ROOT}:${PATH}"
 RUN git clone https://github.com/emscripten-core/emscripten.git
 RUN echo "EM_LLVM_ROOT=\"${EM_LLVM_ROOT}\"" >> $HOME/.emscripten
 WORKDIR /build/emscripten
-# RUN ./bootstrap
+RUN ./bootstrap
