--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.21",
+    "@tanstack/react-query": "^5.49.2",
     "next": "^14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
