--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,4 +11,18 @@ jobs:
         uses: actions/checkout@v4
       - name: Listing files
         run: ls -R .
-
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Login to ghcr.io
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          context: web
+          target: next
+          push: true
+          tags: ghcr.io/${{ github.repository }}:latest
