Update build script of tools

--- a/tools/emscripten/Dockerfile
+++ b/tools/emscripten/Dockerfile
@@ -1,19 +1,19 @@
-FROM myllvm:0.1 AS llvm-build
-FROM mybinaryen:0.1 AS binaryen-build
+FROM ubuntu:22.04
 
-FROM myubuntu:0.1
+RUN \
+  apt-get update && \
+  apt-get -y install git python3 tar xz-utils
 
-COPY --from=llvm-build /build/llvm-project/build /build/llvm
-COPY --from=node:lts /usr/local /build/node
-COPY --from=binaryen-build /build/binaryen /build/binaryen
 
 # 安装 emscripten
 WORKDIR /build
-ENV NODE_JS_ROOT="/build/node/bin"
-ENV BINARYEN_ROOT="/build/binaryen/bin"
-ENV EM_LLVM_ROOT="/build/llvm/bin"
-ENV PATH="${EM_LLVM_ROOT}:${BINARYEN_ROOT}:${NODE_JS_ROOT}:${PATH}"
-RUN git clone https://github.com/emscripten-core/emscripten.git
-RUN echo "EM_LLVM_ROOT=\"${EM_LLVM_ROOT}\"" >> $HOME/.emscripten
-WORKDIR /build/emscripten
-RUN ./bootstrap
+RUN git clone https://github.com/emscripten-core/emsdk.git
+WORKDIR /build/emsdk
+RUN ./emsdk install latest
+RUN ./emsdk activate latest
+
+COPY <<EOF /etc/profile.d/activate_emsdk.sh
+. /build/emsdk/emsdk_env.sh
+EOF
+
+CMD bash -l
