--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,7 +1,12 @@
 name: Build
 on: 
-  - workflow_dispatch
-  - push
+  push:
+    tags:
+      - '*'
+    branches:
+      - 'master'
+      - 'main'
+
 jobs:
   job0:
     runs-on: ubuntu-22.04
@@ -18,10 +23,18 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build and push
+      - name: Build and push with the latest tag
         uses: docker/build-push-action@v6
         with:
           context: web
           target: web
           push: true
           tags: ghcr.io/${{ github.repository }}:latest
+      - name: Build and push with the named tag
+        if: ${{ github.ref_type == 'tag' }}
+        uses: docker/build-push-action@v6
+        with:
+          context: web
+          target: web
+          push: true
+          tags: ghcr.io/${{ github.repository }}:${{ github.ref_name }}
